// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Menus 2 Lines MenuItem With Avatar: Components/Menus 2 Lines MenuItem With Avatar 1`] = `
.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c3.c3 {
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  background-color: #f5f6fb;
}

.c3.c3:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c3.c3:active {
  opacity: 0.76;
}

.c3 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2 {
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #616161;
}

.c0.c0 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding: 4px 16px;
  box-sizing: border-box;
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

<li
  className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c0"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <div
      className="MuiAvatar-root c3"
      size="medium"
    >
      <img
        className="MuiAvatar-img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="MuiListItemText-root c4"
  >
    <span
      className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary list-item-primary"
    >
      Two-line item name
    </span>
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiListItemText-secondary list-item-secondary"
    >
      Secondary text
    </p>
  </div>
  <span
    className="MuiTouchRipple-root"
  />
</li>
`;

exports[`Storyshots Components/Menus SubMenu: Components/Menus SubMenu 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
  fill: #757575;
}

.c0.c0 {
  max-width: 1280px;
  max-height: 416px;
  overflow: auto;
}

.c4.c4 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding: 4px 16px;
  box-sizing: border-box;
}

.c4.c4:hover {
  background-color: rgba(158,158,158,0.12);
}

.c4.c4:active {
  background-color: #0684bd;
  color: #fff;
}

.c4.c4:active .c5 {
  color: #fff;
}

.c1.c1 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding: 4px 16px;
  box-sizing: border-box;
}

.c1.c1:hover {
  background-color: rgba(158,158,158,0.12);
}

.c1.c1:active {
  background-color: #0684bd;
  color: #fff;
}

.c1.c1:active .c5 {
  color: #fff;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<ul
  className="MuiList-root MuiList-padding c0"
  onBlur={[Function]}
  onKeyDown={[Function]}
  role="menu"
  style={
    Object {
      "width": "180px",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      onMouseDown={[Function]}
    >
      <li
        className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c1"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        Sub Menu
        <span
          className=" arrow_right icon c2"
        >
          <svg
            className="c3"
            role="img"
            size="medium"
          >
            <use
              href="#icon-arrow_right"
              xlinkHref="#icon-arrow_right"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </li>
    </span>
  </div>
  <li
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c4"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    My account
    <span
      className="MuiTouchRipple-root"
    />
  </li>
  <li
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c4"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Logout
    <span
      className="MuiTouchRipple-root"
    />
  </li>
</ul>
`;

exports[`Storyshots Components/Menus Text MenuItem With Icon: Components/Menus Text MenuItem With Icon 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 16px;
}

.c2.c2 {
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #616161;
}

.c0.c0 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding: 4px 16px;
  box-sizing: border-box;
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

<li
  className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c0"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <span
      className=" star icon c3"
    >
      <svg
        className="c4"
        role="img"
        size="small"
      >
        <use
          href="#icon-star"
          xlinkHref="#icon-star"
        />
      </svg>
    </span>
  </div>
  Profile
  <span
    className="MuiTouchRipple-root"
  />
</li>
`;

exports[`Storyshots Components/Menus Text MenuItem: Components/Menus Text MenuItem 1`] = `
.c0.c0 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding: 4px 16px;
  box-sizing: border-box;
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

<li
  className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters c0"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  Profile
  <span
    className="MuiTouchRipple-root"
  />
</li>
`;
